@@ -598,6 +598,7 @@ make_area (PLOTGROUP *grp)
 {
     grp->window = gtk_window_new(GTK_WINDOW_TOPLEVEL);
     gtk_window_set_title(GTK_WINDOW(grp->window), _("gretl: boxplots"));
+    gtk_window_set_policy(GTK_WINDOW(grp->window), FALSE, FALSE, FALSE);
 
     /* Create the drawing area */
     grp->area = gtk_drawing_area_new ();
@@ -1272,6 +1273,36 @@ static int special_varcount (const char *s)
     return n;
 }
 
+/* remove extra spaces around operators in boxplots line */
+
+static char *delete_spaces_in_parens (const char *line)
+{
+    char *s, *p;
+    int inparen = 0;
+
+    s = malloc(strlen(line) + 1);
+    if (s == NULL) return NULL;
+
+    p = s;
+
+    while (*line) {
+	if (*line == '(') inparen = 1;
+	if (*line == ')') {
+	    if (inparen == 1) inparen = 0;
+	    else {
+		free(s);
+		return NULL;
+	    }
+	}
+	if (inparen && *line == ' ') ;
+	else *p++ = *line;
+	line++;
+    }
+
+    *p = 0;
+    return s;
+}
+
 int boolean_boxplots (const char *str, double ***pZ, DATAINFO *pdinfo, 
 		      int notches)
 {
@@ -1283,9 +1314,8 @@ int boolean_boxplots (const char *str, double ***pZ, DATAINFO *pdinfo,
     if (!strncmp(str, "boxplots ", 9)) str += 9;
     else if (!strncmp(str, "boxplot ", 8)) str += 8;
 
-    s = malloc(strlen(str) + 1);
+    s = delete_spaces_in_parens(str);
     if (s == NULL) return 1;
-    strcpy(s, str);  
 
     nvars = special_varcount(s);
     if (nvars == 0) {
@@ -1309,8 +1339,9 @@ int boolean_boxplots (const char *str, double ***pZ, DATAINFO *pdinfo,
 		bools[i-1] = malloc(strlen(tok) + 1);
 		strcpy(bools[i-1], tok);
 		nbool++;
-	    } else
+	    } else {
 		err = 1;
+	    }
 	} else {
 	    if (isdigit(tok[0])) { 
 		v = atoi(tok);
