@@ -24,6 +24,6 @@
 #define LIBGRETL_REVISION  6
 #define LIBGRETL_AGE       0
 
-const char *version_string = "1.0.7";
+const char *version_string = "1.0.8";
 
 #endif
